// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AdvancedCreateComment should match snapshot when cannot post 1`] = `
<form
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={false}
    canUploadFiles={true}
    channelId=""
    currentUserId=""
    draft={
      Object {
        "fileInfos": Array [
          Object {},
          Object {},
          Object {},
        ],
        "message": "Test message",
        "uploadsInProgress": Array [
          Object {},
        ],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSelect={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    isThreadView={false}
    location="RHS_COMMENT"
    maxPostSize={4000}
    message="Test message"
    postId=""
    postMsgKeyPress={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/AdvancedCreateComment should match snapshot, comment with message 1`] = `
<form
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId=""
    currentUserId=""
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "Test message",
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSelect={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    isThreadView={false}
    location="RHS_COMMENT"
    maxPostSize={4000}
    message="Test message"
    postId=""
    postMsgKeyPress={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/AdvancedCreateComment should match snapshot, emoji picker disabled 1`] = `
<form
  onSubmit={[Function]}
>
  <FileLimitStickyBanner />
  <AdvanceTextEditor
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId=""
    currentUserId=""
    draft={
      Object {
        "fileInfos": Array [
          Object {},
          Object {},
          Object {},
        ],
        "message": "Test message",
        "uploadsInProgress": Array [
          Object {},
        ],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={false}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSelect={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    isThreadView={false}
    location="RHS_COMMENT"
    maxPostSize={4000}
    message="Test message"
    postId=""
    postMsgKeyPress={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/AdvancedCreateComment should match snapshot, empty comment 1`] = `
<form
  onSubmit={[Function]}
>
  <FileLimitStickyBanner />
  <AdvanceTextEditor
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId=""
    currentUserId=""
    draft={
      Object {
        "fileInfos": Array [
          Object {},
          Object {},
          Object {},
        ],
        "message": "Test message",
        "uploadsInProgress": Array [
          Object {},
        ],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSelect={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    isThreadView={false}
    location="RHS_COMMENT"
    maxPostSize={4000}
    message="Test message"
    postId=""
    postMsgKeyPress={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/AdvancedCreateComment should match snapshot, non-empty message and uploadsInProgress + fileInfos 1`] = `
<form
  onSubmit={[Function]}
>
  <FileLimitStickyBanner />
  <AdvanceTextEditor
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId=""
    currentUserId=""
    draft={
      Object {
        "fileInfos": Array [
          Object {},
          Object {},
          Object {},
        ],
        "message": "Test message",
        "uploadsInProgress": Array [
          Object {},
        ],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSelect={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    isThreadView={false}
    location="RHS_COMMENT"
    maxPostSize={4000}
    message="Test message"
    postId=""
    postMsgKeyPress={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;
